# gmail-enhanced-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  accounts.json  accounts.json.example  package.json  pyproject.toml  requirements.txt
.claude/agents/: outlook-api-reviewer.md  security-reviewer.md  test-writer.md
.claude/commands/: mail.md
.claude/hooks/: format-python.sh  protect-credentials.sh
.claude/rules/: agent-protocol.md  email-security.md  python.md  testing.md
.omc/state/: agent-replay-e88b9f07-3b96-49e9-af57-ac67f9f5ea60.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
evidence/: CLAIMS_ACTION_GUIDE.md
scripts/: generate-digest.py  hud-mail-status.sh  refresh-mail-hud.py
src/: account_registry.py  auth.py  config.py  email_client.py  gmail_client.py  handler_context.py  http_server.py  itinerary_parser.py  main.py  models.py  outlook_client.py  outlook_query.py  protocol.py  server.py
src/calendar/: __init__.py  client.py  context.py  date_parser.py
src/digest/: __init__.py  engine.py  formatter.py
src/tools/: __init__.py  ai_context.py  attachments.py  batch_reply.py  calendar.py  digest.py  drafts.py  hygiene.py  itinerary.py  labels.py  response.py  search.py  send.py  templates.py  tool_schemas.py  triage.py
src/triage/: __init__.py  cache.py  engine.py  models.py  priority_senders.py  tracker.py
src/ui/: app.js  index.html  style.css
tests/: conftest.py
tests/integration/: test_http_server.py  test_multi_account.py  test_stdio_roundtrip.py  test_triage_roundtrip.py
tests/unit/: test_auth.py  (+17 more)
(+34 files in other folders)
