[project]
name = "gmail-enhanced-mcp"
version = "1.0.0"
description = "Enhanced Gmail MCP server with attachment support for Claude Code"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "googleapiclient.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_auth_oauthlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.auth.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires real Gmail credentials (deselect with '-m not live')",
    "slow: takes more than 5 seconds",
]
addopts = "-m 'not live' --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/auth.py", "src/main.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
